feature: add pouch kill functionality
